# python-solver

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
GenericSolver/notebooks/: Linear Examples.ipynb
GenericSolver/python/: dask_util.py  pyADMMsolver.py  pyCuVector.py  pyDaskOperator.py  pyDaskVector.py  pyNonLinearSolver.py  pyNpOperator.py  pyOperator.py  pyParOperator.py  pyProblem.py  pySolver.py  pySparseSolver.py  pyVector.py
generic-solver/: _pyVector.py
genericSolver/: pyCuVector.py  pyDaskVector.py  pyNonLinearSolver.py  pyNpOperator.py  pyOperator.py  pyProblem.py  pySolver.py  pySparseSolver.py  pyVector.py
generic_solver/: __init__.py  _pyADMMsolver.py  _pyCuOperator.py  _pyDaskOperator.py  _pyLinearSolver.py  _pyNonLinearSolver.py  _pyNormSolver.py  _pyNormStep.py  _pyOperator.py  _pyParOperator.py  _pyProblem.py  _pySolver.py  _pySparseSolver.py  _pyStepper.py  _pyStopper.py  _pyVector.py  _sep_util.py
notebooks/: Linear Examples.ipynb  Rosenbrock.ipynb
